# $Id$

SUBDIRS = 

metacartabindir = /usr/lib/metacarta
metacartabin_SCRIPTS = $(SCRIPT_FILES)

SCRIPT_FILES = agents-install \
	agents-uninstall \
	agents-run \
	agents-stop \
	agents-registeragent \
	agents-unregisteragent \
	agents-unregisterallagents \
	agents-synchronizeall \
	agents-registeroutput \
	agents-unregisteroutput \
	agents-unregisteralloutputs \
	agents-synchronizealloutputs

clean-local: 
	echo "Nothing to do"
